Endpoints updated
